[project]
name = "helix-nemotron-reasoning"
version = "0.1.0"
description = "LoRA fine-tuning of Nemotron-3-Nano-30B for logical reasoning — helix competition entry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "helices[claude]>=0.1.4",
    "accelerate>=1.4.0",
    "causal-conv1d>=1.5.0",
    "datasets>=3.3.0",
    "kagglehub>=0.3.0",
    "mamba-ssm>=2.2.4",
    "pandas>=2.2.0",
    "peft>=0.15.0",
    "scikit-learn>=1.6.0",
    "torch>=2.5.0",
    "transformers>=4.50.0",
    "tqdm>=4.67.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
